# pancake

./: .buildinfo  .clang-format  .gitignore  .nojekyll  CMakeLists.txt  README.md  build.bat  build.py  conanbuildinfo.txt  conanfile.py  conanfile.txt  conaninfo.txt  genindex.html  graph_info.json  index.html  lief-test.cpp  meson.build  objects.inv  pancake_metadata.json.in  search.html  searchindex.js  setup.bat  setup.py  setup_meson.bat  sitemap.xml
.cache/clangd/index/: AArch64.def.E7B5A842E69C580C.idx  ARM.def.6B3CD760476162C2.idx  ART.hpp.BF7BAA29878A4095.idx  Abstract.hpp.D8DD0F5515305D1B.idx  AndroidNote.hpp.C678329C06FF2256.idx  Attribute.hpp.EC930A0D8AF6DA8D.idx  AuxiliarySymbol.hpp.0E11BB8D63DA4FAB.idx  Binary.hpp.2C3B0FC6E1E9F885.idx  Binary.hpp.490A1FB280CF8C71.idx  Binary.hpp.75317244EFD9E38E.idx  Binary.hpp.A34160943A9502C8.idx  Binary.hpp.CAAFF12A983A8535.idx  BinaryParser.hpp.CEB2110875815107.idx  BinaryStream.hpp.227165063DDD1F5C.idx  BindingInfo.hpp.49B950EA4DDCFF73.idx  BuildVersion.hpp.26789926735A204C.idx  Builder.hpp.0FE5F9FEAEC50677.idx  Builder.hpp.E924D6AC566CA519.idx  Builder.hpp.EF8B95D822F98A3A.idx  Class.hpp.7003D8D885A7BE39.idx  Class.hpp.BABCFA7D707D624A.idx  CodeInfo.hpp.4EECFB5F50320ECF.idx  CodeIntegrity.hpp.11DA1C35294AB887.idx  CodeSignature.hpp.2C6B82422006EFB1.idx  CodeView.hpp.D098FB439D6B972A.idx  CodeViewPDB.hpp.2CF75F38516B22EF.idx  ContentInfo.hpp.7C0788C0D905EF59.idx  ContentType.hpp.E4372998B0BED3C5.idx  Convert.hpp.C71A6FF0616BBCA9.idx  Core.hpp.E077AD98C2706FF6.idx  CoreAuxv.hpp.D15E5489800C6429.idx  CoreFile.hpp.2E2DDFE600D311F1.idx  CorePrPsInfo.hpp.83CC1449B30D8597.idx  CorePrStatus.hpp.F66D73E17F12CEC9.idx  CoreSigInfo.hpp.37A6B2110FDD5F46.idx  DEX.hpp.C80281E999182210.idx  DWARF.hpp.D48CCF5E21F01033.idx  DataCodeEntry.hpp.06A39433F6439DCE.idx  DataDirectory.hpp.FE6B96B1CB1142DE.idx  DataInCode.hpp.61DC7E0B4781D743.idx  (+223 more)
.github/script/: doc_builder.sh
.github/workflows/: docs.yml
_sources/: index.rst.txt
_sources/api/: exception.rst.txt  movie.rst.txt  sm64.rst.txt
_static/: documentation_options.js
api/: exception.html  index.html  movie.html  sm64.html
buildscript/: always_include.py  build.py  includes.py  libs.py  postconf.py  rsrc_gen.py  setup.py
cmake/: default_build_type.cmake  dep_LIEF.cmake  dep_backward.cmake  dep_libdwarf.cmake  dep_nlohmann_json.cmake  err_handling.cmake  install_helper.cmake
cmake/patches/: backward.patch  libdwarf.patch  libdwarf_no_zlib.patch
conan_recipes/: README.md  setup_conan.py
conan_recipes/LIEF/: conandata.yml  conanfile.py
conan_recipes/libdwarf/: conandata.yml  conanfile.py
conan_recipes/mbedtls/: conandata.yml
docs/: Doxyfile.in  conf.py  index.rst  meson.build  requirements.txt
docs/_static/css/: rtd-fix.css
docs/api/: exception.rst  index.rst  movie.rst  sm64.rst
gh-pages/: .buildinfo  index.html  objects.inv  searchindex.js  sitemap.xml
gh-pages/api/: movie.html
libsm64/: .gitignore  README.md  fernet-lock.py
local/: .gitignore  1key_4_18_78.m64  README.md
newsrc/: CMakeLists.txt
newsrc/pancake_api/: CMakeLists.txt
newsrc/pancake_api/include/pancake/: exception.hpp  sm64.hpp
newsrc/pancake_api/src/: sm64.cpp
newsrc/pancake_dl/: CMakeLists.txt
newsrc/pancake_dl/include/pancake/dl/: pdl.hpp
newsrc/pancake_dl/src/: linux.cpp
newsrc/pancake_dwarf/: CMakeLists.txt
newsrc/pancake_dwarf/include/pancake/dwarf/: enums.hpp  functions.hpp  memory.hpp  type_lookup.hpp  types.hpp
newsrc/pancake_dwarf/src/: functions.cpp
newsrc/pancake_expr/: CMakeLists.txt
newsrc/pancake_expr/include/pancake/expr/: compile.hpp  parse.hpp
newsrc/pancake_expr/src/: compile.cpp  parse.cpp
newsrc/pancake_rsrc/: CMakeLists.txt
newsrc/pancake_rsrc/include/pancake/rsrc/: span.hpp  spanstream.hpp
newsrc/pancake_rsrc/src/: spanbuf.cpp
script/: build.py  generator.py  setup.py
scripts/: lib_merger.py  rsrc_gen_array.py  rsrc_gen_asm.py  rsrc_gen_cstr.py  setup.py
scripts/res/: rsrc_asm.elf.s  rsrc_asm.pe.asm
src/: CMakeLists.txt  meson.build
src/common/: dwarf.cpp  movie.cpp
src/common/dwarf/: error.cpp  functions.cpp  type_lookup.cpp
src/common/expr/: compile.cpp  parse.cpp
src/cpp/: dwarf.cpp  exparser.cpp  movie.cpp  sm64-win.cpp
src/cpp/windows/: sm64.cpp
src/experiment/: experiment.cpp
src/export/pancake/: exception.hpp  gobjects.hpp  movie.hpp  movie_button_ops.ipp  properties.hpp  sm64.hpp  utils.hpp
src/linux/: sm64.cpp
src/pancake_api/: CMakeLists.txt  README.md
src/pancake_api/include/pancake/: sm64.hpp
src/pancake_api/include/pancake/c_api/: sm64.h
src/pancake_api/src/: movie.cpp  sm64.cpp
src/pancake_dl/: CMakeLists.txt  README.md
src/pancake_dl/include/pancake/dl/: pdl.hpp
src/pancake_dl/src/: linux.cpp  win32.cpp
src/pancake_dwarf/: CMakeLists.txt  README.md
src/pancake_dwarf/include/pancake/dwarf/: enums.hpp  error.hpp  type_info.hpp  types.hpp
src/pancake_expr/: CMakeLists.txt  README.md
src/pancake_expr/include/pancake/expr/: compile.hpp  parse.hpp
src/pancake_expr/src/: compile.cpp  parse.cpp
src/pancake_rsrc/: CMakeLists.txt  README.md
src/pancake_rsrc/include/pancake/: macro_defns.hpp
src/pancake_rsrc/include/pancake/rsrc/: spanstream.hpp
src/pancake_stx/: CMakeLists.txt  README.md
src/pancake_stx/include/pancake/stx/: misc_hashes.hpp  overload.hpp
src/private/pancake/: dwarf.hpp  dwarf_enums.hpp  exparser.hpp  macro_defns.hpp  overload.hpp  shared_lib.hpp  strcvt.hpp
src/private/pancake/debug/: pause.hpp
src/private/pancake/dwarf/: enums.hpp  error.hpp  functions.hpp  memory.hpp  type_lookup.hpp
src/private/pancake/expr/: compile.hpp  parse.hpp
src/private/pancake/resource/: resource_struct.hpp  rsrc_def.hpp
src/private/pancake/stx/: README.md  overload.hpp  pair_hash.hpp
src/private/pancake/utils/: intrins.hpp  strcvt.hpp
src/windows/: sm64.cpp
subprojects/: LIEF.wrap  libdwarf.wrap  lief.wrap
test/: CMakeLists.txt  meson.build
test/cpp/: experiment.cpp  expr_parse_test.cpp  m64_test.cpp  pedump.cpp
test/include/: debug.hpp  mathutil.hpp
(+5 files in other folders)
